[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "reddit_cascade_processing"
version = "0.0.1"
description = "process reddit archives to format information cascade data"
authors = [
  { name = "hide-ous" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["reddit_cascade_processing"]
include = ["pyproject.toml", "reddit_cascade_processing/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["reddit_cascade_processing"]
force-sort-within-sections = true

